[gd_scene load_steps=2 format=3 uid="uid://d4cr3cqb57b63"]

[ext_resource type="Script" path="res://src/hud/unit_picker.gd" id="1_s5oal"]

[node name="Control" type="ColorRect" groups=["unit_picker"]]
custom_minimum_size = Vector2(100, 100)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -375.0
offset_bottom = -615.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.883273, 0.883273)
color = Color(0.509804, 0.509804, 0.509804, 0.533333)
script = ExtResource("1_s5oal")

[node name="Border" type="ColorRect" parent="."]
visible = false
show_behind_parent = true
layout_mode = 0
offset_left = -5.0
offset_top = -5.0
offset_right = 105.0
offset_bottom = 105.0
color = Color(0.215686, 0.85098, 0.54902, 0.498039)

[node name="CooldownOverlay" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 1
offset_right = 100.0
offset_bottom = 90.0
color = Color(0, 0, 0, 0.698039)

[node name="Cooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="selection_changed" from="." to="." method="_on_selection_changed"]
